Fix categories styles and page title spacing

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -55,7 +55,7 @@
 }
 
 .single .article--meta {
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 
 .post-credit {
@@ -115,6 +115,10 @@
   .single .wp-post-image {
     height: auto;
     width: 100%;
+  }
+
+  .single .article--meta {
+    margin-bottom: 2em;
   }
 }
 
